--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DevFolio Bootstrap Template</title>
+  <title>Will Constable</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
@@ -183,16 +183,15 @@
                 <img src="img/resume-web.jpeg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
                     <h2 class="w-title">Resume</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">08 Jan. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://trusting-mestorf-e94496.netlify.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -207,16 +206,15 @@
                 <img src="img/Screenshot_2020-01-08 Will Constable Web Developer.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
                     <h2 class="w-title">Portfolio</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://willconstable.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -231,16 +229,15 @@
                 <img src="img/Screenshot_2020-01-08 Selecao one page site template with bootstrap.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
                     <h2 class="w-title">MDElectrics</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://gallant-austin-d4da4d.netlify.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -250,21 +247,21 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
+            <a href="img/Screenshot_2020-01-16 Regna.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
+                <img src="img/Screenshot_2020-01-16 Regna.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Regna</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://goofy-tesla-1d0c71.netlify.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -279,16 +276,15 @@
                 <img src="img/Screenshot_2020-01-09 Screenshot.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
                     <h2 class="w-title">Ristorante</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://sleepy-sinoussi-a8adcb.netlify.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -298,21 +294,20 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="img/Screenshot_2020-01-16 Maxim.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/Screenshot_2020-01-16 Maxim.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
-                <div class="row">
+                <div class="row justify-content-between">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">Maxim</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://gallant-liskov-a92ced.netlify.com" target="blank" class="ion-android-search"></a>
                     </div>
                   </div>
                 </div>
@@ -400,7 +395,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="" method="post" role="form" class="contactForm">
+                      <form action="" method="POST" role="form" class="contactForm" name="contact" data-netlify="true">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
