--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="" method="POST" role="form" class="contactForm" name="contact" data-netlify="true">
+                      <form method="POST" name="contact" data-netlify="true">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
