Intro section image updated and minor tweaks made to grammer

--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/iceland.jpg)">
+  <div id="home" class="intro route bg-image">
+    <div class="bg-video">
+      <video class="bg-video__content" autoplay muted loop>
+          <source src="img/coverr-arctic-waves-1575197287772.mp4" type="video/mp4">
+              Your browser is not supported!
+      </video>
+  </div>
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -106,7 +112,7 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Technologies and Frameworks Used</p>
+                  <p class="title-s">Skills</p>
                   <span>HTML5</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="85" aria-valuemin="0"
@@ -145,7 +151,7 @@
                     Welcome to my portfolio site! I deliver simple, modern websites for small business's and individuals. Ranging from personal resume and portfolio sites to fully functional business websites.
                   </p>
                   <p class="lead">
-                    Please see the portfolio section below for some examples of the type of work I can deliver. I can also fully design your site from scratch or develop a design that you already have into a fully functioning website.
+                    Please see the portfolio section below for some examples of the type of work I can deliver. I can also fully design your site from scratch, or develop a design that you already have into a fully functioning website.
                   </p>
                   <p class="lead">
                     Take a look at the pricing section for a break down of the price plans that I currently offer. These plans are not rigid and can be fully customised depending on your requirements.
@@ -168,9 +174,6 @@
             <h3 class="title-a">
               Portfolio
             </h3>
-            <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
             <div class="line-mf"></div>
           </div>
         </div>
@@ -330,9 +333,6 @@
             <h3 class="title-a">
               Pricing
             </h3>
-            <p class="subtitle-a">
-              Please see below for an overview of my pricing!
-            </p>
             <div class="line-mf"></div>
           </div>
         </div>
@@ -438,7 +438,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      Please do get in touch with me. All price plans are fully customizable and I will happily sit down and discuss your needs to find the best price plan and options to meet your requirements.
+                      Please do get in touch with me. All price plans are fully customisable and I will happily sit down and discuss your needs to find the best price plan and options to meet your requirements.
                     </p>
                     <ul class="list-ico">
                       <!-- <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li> -->
