PHP for form added

--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
                 <div class="col-md-6">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Send me message
+                      Send me a message
                     </h5>
                   </div>
                   <div>
-                      <form method="POST" name="contact" data-netlify="true">
+                      <form method="POST" name="myemailform" action="form-to-email.php">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
