--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form method="POST" name="myemailform" action="form-to-email.php">
+                      <form action="contactform/contactform.php" method="post" role="form" class="contactForm">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
                       <div class="row">
@@ -488,6 +488,7 @@
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <script src="lib/typed/typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
+
   <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
