Changes made to skills section and webm video added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="bg-video">
       <video class="bg-video__content" autoplay muted loop>
           <source src="img/coverr-arctic-waves-1575197287772.mp4" type="video/mp4">
+          <source src="img/coverr-arctic-waves-1575197287772-copy.webm" type="video/webm">
               Your browser is not supported!
       </video>
   </div>
@@ -99,7 +100,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/Me.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/Will.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -115,12 +116,12 @@
                   <p class="title-s">Skills</p>
                   <span>HTML5</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span>CSS3</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>PHP</span> <span class="pull-right">50%</span>
@@ -130,7 +131,7 @@
                   </div>
                   <span>JAVASCRIPT</span> <span class="pull-right">60%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>Bootstrap</span> <span class="pull-right">90%</span>
